# srell

./: .editorconfig  .gitattributes  .gitignore  0001-conftest.cpp.patch  CMakeLists.txt  README.md  download-new-version.py  version.txt
.github/workflows/: download.yml  test.yml
srell-src/: history_en.txt  history_ja.txt  license.txt  readme_en.txt  readme_ja.txt  srell.hpp
srell-src/misc/: conftest-data.h  conftest.cpp
srell-src/single-header/: srell.hpp
srell-src/unicode/: readme_en.txt  readme_ja.txt  ucfdataout2.cpp  updataout3.cpp
